<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:orientation = "vertical"
    android:paddingTop="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp"
    android:background="@color/colorDarkTwo"
    android:layout_height = "wrap_content" >



    <LinearLayout
        android:orientation = "horizontal"
        android:weightSum="4"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content" >

        <TextView
            android:text = "@string/about"
            android:textSize="28sp"
            android:layout_weight="4"
            android:textColor="@color/colorWhite"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"/>

        <ImageView
            android:id="@+id/about_close_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/icon_img_desc"
            android:src="@drawable/ic_close_icon"/>

    </LinearLayout >

    <View
        android:layout_marginTop="8dp"
        android:background="@color/colorLightText"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:text = "@string/app_name"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"/>

    <TextView
        android:text = "@string/version_1_0_00"
        android:textSize="14sp"
        android:textColor="@color/colorForestGreen"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"/>

    <TextView
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/copyright_message"
        android:textSize="14sp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="16dp" />

    <View
        android:background="@color/colorLightText"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:gravity="center"
      android:orientation="horizontal">

      <TextView
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:textColor="@color/colorWhite"
          android:text="@string/developed_and_design_by"
          android:textSize="16sp"
          android:textAlignment="center"
          android:textStyle="bold" />

      <TextView
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:textColor="@color/colorWhite"
          android:text="@string/author_name"
          android:textAlignment="center"
          android:layout_margin="6dp"
          android:textSize="16sp"/>

  </LinearLayout>


    <LinearLayout
        android:orientation = "horizontal"
        android:gravity="center"
        android:padding="12dp"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content" >

        <ImageButton
            android:id="@+id/about_facebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/icon_img_desc"
            android:background="@drawable/custom_icon_bg"
            android:src="@drawable/ic_facebook_icon"/>

    </LinearLayout >


</LinearLayout >