<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp"
    android:gravity="center"
    android:background="@color/colorDarkTwo"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/alert_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/icon_img_desc"
        android:src="@drawable/ic_signal_wifi_off_icon"/>

    <TextView
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text="@string/app_name"
        android:layout_margin="8dp"
        android:id = "@+id/alert_title" />

    <TextView
        android:id="@+id/alert_content"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:text="@string/copyright_message"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id = "@+id/alert_close_btn"
        android:text = "@string/close"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

</LinearLayout>