<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDarkTwo"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textColor="@color/colorWhite"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/feedback_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_feedback_bg"
        android:gravity="start"
        android:hint="@string/feedback_message_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxEms="12"
        android:minHeight="140dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/feedback_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel_btn"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/feedback_submit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/submit_btn"
            android:textColor="@color/colorForestGreen"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>