<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    tools:context=".fragment.SymptomsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/symptoms_message"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_icon_bg"
                android:contentDescription="@string/icon_img_desc"
                android:scaleType="centerInside"
                android:src="@drawable/ic_fever_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/fever"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorLightText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_icon_bg"
                android:contentDescription="@string/icon_img_desc"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tired_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tiredness"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorLightText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_icon_bg"
                android:contentDescription="@string/icon_img_desc"
                android:scaleType="centerInside"
                android:src="@drawable/ic_cough_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/dry_cough"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorLightText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_icon_bg"
                android:contentDescription="@string/icon_img_desc"
                android:scaleType="centerInside"
                android:src="@drawable/ic_sorethroat_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/shortness_of_breath_or_difficulty_breathing"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorLightText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_icon_bg"
                android:contentDescription="@string/icon_img_desc"
                android:scaleType="centerInside"
                android:src="@drawable/ic_sorethroat_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/sore_throat"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorLightText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_icon_bg"
                android:contentDescription="@string/icon_img_desc"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tired_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/aches_and_pains"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorLightText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/custom_icon_bg"
                android:contentDescription="@string/icon_img_desc"
                android:scaleType="centerInside"
                android:src="@drawable/ic_nose_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/nasal_congestion_running_nose"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorLightText" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>